# naist_xarm

./: CMakeLists.txt  README.md  package.xml  xarm_control.py
src/: basic_simple_talker.cpp  demo (コピー).cpp  demo.cpp  test.cpp
xarm6_cad/: hand_mount_base_xarm v1.stl
xarm_api/test/: .move_test.cpp.swp
